--- a/base/templates/base/topics.html
+++ b/base/templates/base/topics.html
@@ -1,9 +1,9 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<main class="create-room layout">
+<main class="topics-page layout">
   <div class="container">
-    <div class="layout__box">
+    <div class="layout__box topics-box">
       <div class="layout__boxHeader">
         <div class="layout__boxTitle">
           <a href="{% url 'home' %}">
