--- a/base/templates/base/activity_component.html
+++ b/base/templates/base/activity_component.html
@@ -2,41 +2,34 @@
   <div class="activities__header">
     <h2>Recent Activities</h2>
   </div>
-{% for message in room_messages %}
-  <div class="activities__box">
-    <div class="activities__boxHeader roomListRoom__header">
-      <a href="{% url 'user-profile' message.user.id %}" class="roomListRoom__author">
-        <div class="avatar avatar--small">
-          <img src="{{message.user.avatar.url}}"/>
+  <div class="activities__container">
+    {% for message in room_messages %}
+      <div class="activities__box">
+        <div class="activities__boxHeader">
+          <div class="activities__boxAvatar">
+            <div class="avatar avatar--small">
+              <img src="{{ message.user.avatar.url }}" alt="{{ message.user.username }}" /></div>
+          </div><p>
+            <a href="{% url 'user-profile' message.user.id %}">
+              <span>@{{message.user.username}}</span>
+            </a>
+            replied to
+            <a href="{% url 'room' message.room.id %}">
+              <span>"{{message.room}}"</span>
+            </a>
+          </p>
         </div>
-        <p>
-          @{{message.user.name}}
-          <span>{{message.created | timesince}} ago</span>
-        </p>
-      </a>
-
-{% if request.user == message.user %}
-
-      <div class="roomListRoom__actions">
-        <a href="{% url 'delete-message' message.id %}">
-          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-            <title>Remove</title>
-            <path
-              d="M27.314 6.019l-1.333-1.333-9.98 9.981-9.981-9.981-1.333 1.333 9.981 9.981-9.981 9.98 1.333 1.333 9.981-9.98 9.98 9.98 1.333-1.333-9.98-9.98 9.98-9.981z"
-            ></path>
+        <div class="activities__boxContent">
+          {{message.body}}
+        </div>
+        <div class="activities__boxTime">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+            <circle cx="12" cy="12" r="10"></circle>
+            <polyline points="12 6 12 12 16 14"></polyline>
           </svg>
-        </a>
+          {{message.created|timesince}} ago
+        </div>
       </div>
-
-{% endif %}
-
-    </div>
-    <div class="activities__boxContent">
-      <p>replied to post “<a href="{% url 'room' message.room.id %}">{{message.room}}</a>”</p>
-      <div class="activities__boxRoomContent">
-        {{message.body}}
-      </div>
-    </div>
+    {% endfor %}
   </div>
-{% endfor %}
 </div>
