--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,18 +1,23 @@
 {% extends 'main.html' %}
+{% load static %}
 
 {% block content %}
 
 <main class="layout layout--3">
+  <!-- Mobile Menu -->
+  <div class="mobile-menu">
+    <div class="mobile-menuItems">
+      <a class="btn btn--pill" href="{% url 'topics' %}">Browse Topics</a>
+      <a class="btn btn--pill" href="{% url 'activity' %}">Recent Activities</a>
+    </div>
+  </div>
+
   <div class="container">
-
     <!-- Topics Start -->
-
     {% include 'base/topics_component.html' %}
-
     <!-- Topics End -->
 
     <!-- Room List Start -->
-
     <div class="roomList">
       <div class="mobile-menu">
         <form class="header__search" action="{% url 'home' %}" method="GET">
@@ -23,13 +28,9 @@
                 d="M32 30.586l-10.845-10.845c1.771-2.092 2.845-4.791 2.845-7.741 0-6.617-5.383-12-12-12s-12 5.383-12 12c0 6.617 5.383 12 12 12 2.949 0 5.649-1.074 7.741-2.845l10.845 10.845 1.414-1.414zM12 22c-5.514 0-10-4.486-10-10s4.486-10 10-10c5.514 0 10 4.486 10 10s-4.486 10-10 10z"
               ></path>
             </svg>
-            <input name="q" placeholder="Search for posts" />
+            <input placeholder="Search for posts" name="q" />
           </label>
         </form>
-        <div class="mobile-menuItems">
-          <a class="btn btn--main btn--pill" href="{% url 'topics' %}">Browse Topics</a>
-          <a class="btn btn--main btn--pill" href="{% url 'activity' %}">Recent Activities</a>
-        </div>
       </div>
       <div class="roomList__header">
         <div> 
@@ -47,18 +48,33 @@
         </a>
       </div>
 
-    {% include 'base/feed_component.html' %}
-
+      {% include 'base/feed_component.html' %}
     </div>
     <!-- Room List End -->
 
     <!-- Activities Start -->
-
     {% include 'base/activity_component.html' %}
-
-
     <!-- Activities End -->
   </div>
 </main>
+
+<script>
+  let lastScrollTop = 0;
+  const header = document.querySelector('.header');
+  
+  if (header) {
+    window.addEventListener('scroll', () => {
+      const currentScroll = window.pageYOffset || document.documentElement.scrollTop;
+      
+      if (currentScroll > lastScrollTop && currentScroll > 60) {
+        header.classList.add('header--hidden');
+      } else {
+        header.classList.remove('header--hidden');
+      }
+      
+      lastScrollTop = currentScroll <= 0 ? 0 : currentScroll;
+    }, { passive: true });
+  }
+</script>
 
 {% endblock %}
