--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -1,6 +1,15 @@
 {% extends 'main.html' %}
+{% load static %}
 
 {% block content %}
+{% if messages %}
+<div class="alert alert--error">
+  {% for message in messages %}
+  <p>{{ message }}</p>
+  {% endfor %}
+</div>
+{% endif %}
+
 <main class="profile-page layout layout--2">
   <div class="container">
     <!-- Room Start -->
@@ -15,7 +24,8 @@
               </path>
             </svg>
           </a>
-          <h3>Study Room</h3>
+          <h3>{{room.name}}</h3>
+          <span class="room__time">{{room.created|timesince}} ago</span>
         </div>
         {% if room.host == request.user %}
         <div class="room__topRight">
@@ -51,78 +61,76 @@
 
       </div>
       <div class="room__box scroll">
-        <div class="room__header scroll">
-          <div class="room__info">
-            <h3>{{room.name}}</h3>
-            <span>{{room.created|timesince}} ago</span>
+        <div class="room__header">
+          <div class="room__header-content">
+            <div class="room__host-info">
+              <p>Hosted By</p>
+              <a href="{% url 'user-profile' room.host.id %}" class="room__author">
+                <div class="avatar avatar--small">
+                  <img src="{{room.host.avatar.url}}" />
+                </div>
+                <span>@{{room.host.username}}</span>
+              </a>
+            </div>
+            <span class="room__topics">{{room.topic}}</span>
+            <div class="room__actions">
+              {% if room.host == request.user %}
+              <a href="{% url 'meeting' %}" target="_blank" class="btn btn--main btn--pill">Create Video Room</a>
+              {% endif %}
+              {% if room.host != request.user %}
+              <a href="{% url 'joinroom' %}" target="_blank" class="btn btn--main btn--pill">Join Video Room</a>
+              {% endif %}
+            </div>
           </div>
-          <div class="room__hosted">
-            <p>Hosted By</p>
-            <a href="{% url 'user-profile' room.host.id %}" class="room__author">
-              <div class="avatar avatar--small">
-                <img src="{{room.host.avatar.url}}" />
-              </div>
-              <span>@{{room.host.username}}</span>
-            </a>
-          </div>
-          <!-- <div class="room__details">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, tenetur laudantium? Dicta repellendus
-            rerum consectetur, voluptatem repudiandae eum ea porro cupiditate provident nulla, deserunt, ab ipsum
-            corporis laboriosam deleniti molestias?
-          </div> -->
-          {% if room.host == request.user %}
-          <a href="{% url 'meeting' %}" target = "_blank" class="btn btn--main btn--pill">Create Video Room</a>
-          {% endif %}
-          {% if room.host != request.user %}
-          <a href="{% url 'joinroom' %}" target = "_blank" class="btn btn--main btn--pill">Join Video Room</a>
-          {% endif %}
-          <span class="room__topics">{{room.topic}}</span>
         </div>
 
         <div class="room__conversation">
           <div class="threads scroll">
-
-
-            {% for message in room_messages %}
-            <div class="thread">
-              <div class="thread__top">
-                <div class="thread__author">
-                  <a href="{% url 'user-profile' message.user.id %}" class="thread__authorInfo">
-                    <div class="avatar avatar--small">
-                      <img src="{{message.user.avatar.url}}" />
-                    </div>
-                    <span>@{{message.user.username}}</span>
-                  </a>
-                  <span class="thread__date">{{message.created|timesince}} ago</span>
+            {% if messages_by_date %}
+              {% for date, messages in messages_by_date.items %}
+                <div class="thread-date-separator">
+                  <span>{{ date }}</span>
                 </div>
-
-                {% if request.user == message.user %}
-                <a href="{% url 'delete-message' message.id %}">
-                  <div class="thread__delete">
-                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-                      <title>remove</title>
-                      <path
-                        d="M27.314 6.019l-1.333-1.333-9.98 9.981-9.981-9.981-1.333 1.333 9.981 9.981-9.981 9.98 1.333 1.333 9.981-9.98 9.98 9.98 1.333-1.333-9.98-9.98 9.98-9.981z">
-                      </path>
-                    </svg>
+                {% for message in messages %}
+                  <div class="thread {% if request.user == message.user %}thread--mine{% endif %}">
+                    {% if request.user != message.user %}
+                      <div class="thread__top">
+                        <div class="thread__author">
+                          <a href="{% url 'user-profile' message.user.id %}" class="thread__authorInfo">
+                            <div class="avatar avatar--small">
+                              <img src="{{message.user.avatar.url}}" />
+                            </div>
+                            <span>@{{message.user.username}}</span>
+                          </a>
+                        </div>
+                      </div>
+                    {% endif %}
+                    <div class="thread__details">
+                      {{message.body}}
+                    </div>
                   </div>
-                </a>
-                {% endif %}
+                {% endfor %}
+              {% endfor %}
+            {% else %}
+              <div class="thread-date-separator">
+                <span>No messages yet</span>
               </div>
-              <div class="thread__details">
-                {{message.body}}
-              </div>
-            </div>
-            {% endfor %}
+            {% endif %}
           </div>
         </div>
 
       </div>
       <div class="room__message">
+        {% if request.user.is_authenticated %}
         <form action="" method="POST">
           {% csrf_token %}
           <input name="body" placeholder="Write your message here..." />
         </form>
+        {% else %}
+        <div class="room__message--disabled">
+          <p>Please <a href="{% url 'login' %}">login</a> to send messages in this chat room.</p>
+        </div>
+        {% endif %}
       </div>
     </div>
     <!-- Room End -->
@@ -147,5 +155,23 @@
     <!--  End -->
   </div>
 </main>
-<script src="script.js"></script>
+<script>
+  let lastScrollTop = 0;
+  const roomBox = document.querySelector('.room__box');
+  const header = document.querySelector('.room__top');
+  
+  if (roomBox && header) {
+    roomBox.addEventListener('scroll', () => {
+      const currentScroll = roomBox.scrollTop;
+      
+      if (currentScroll > lastScrollTop && currentScroll > 60) {
+        header.style.transform = 'translateY(-100%)';
+      } else {
+        header.style.transform = 'translateY(0)';
+      }
+      
+      lastScrollTop = currentScroll;
+    });
+  }
+</script>
 {% endblock content %}
