OAuth Implementation done

--- a/templates/main.html
+++ b/templates/main.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon" />
     <link rel="stylesheet" href="{% static 'styles/style.css' %}"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <title>Discom - Find study partners around the world!</title>
   </head>
 
