--- a/base/templates/base/vc_joinroom.html
+++ b/base/templates/base/vc_joinroom.html
@@ -1,58 +1,47 @@
 {% extends 'main.html' %}
+{% load static %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'styles/video.css' %}">
 
-<main class="auth layout">
-
-<div class="container">
-    <div class="layout__box">
-      <div class="layout__boxHeader">
-        <div class="layout__boxTitle">
-          <h3>Join Room</h3>
-        </div>
-      </div>
-      <div class="layout__body">
-        <h2 class="auth__tagline">Connect with your study partners</h2>
-        <form action="{% url 'joinroom' %}" method="POST">
-          {% csrf_token %}
-          <div class="form__group form__group">
-            <input type="text" placeholder="Enter room ID" name="roomID">
-          </div>
-          <button class="btn btn--main" type="submit" value="Join">
-          <svg
-          version="1.1"
-          xmlns="http://www.w3.org/2000/svg"
-          width="32"
-          height="32"
-          viewBox="0 0 32 32"
+<div class="join-room">
+    <div class="join-room__header">
+        <h1 class="join-room__title">Join Video Room</h1>
+        <p class="join-room__subtitle">Connect with your study partners in real-time</p>
+    </div>
+    
+    <form class="join-room__form" action="{% url 'joinroom' %}" method="POST">
+        {% csrf_token %}
+        <input 
+            type="text" 
+            class="join-room__input" 
+            placeholder="Enter room ID" 
+            name="roomID"
+            required
         >
-          <title>lock</title>
-          <path
-            d="M27 12h-1v-2c0-5.514-4.486-10-10-10s-10 4.486-10 10v2h-1c-0.553 0-1 0.447-1 1v18c0 0.553 0.447 1 1 1h22c0.553 0 1-0.447 1-1v-18c0-0.553-0.447-1-1-1zM8 10c0-4.411 3.589-8 8-8s8 3.589 8 8v2h-16v-2zM26 30h-20v-16h20v16z"
-          ></path>
-          <path
-            d="M15 21.694v4.306h2v-4.306c0.587-0.348 1-0.961 1-1.694 0-1.105-0.895-2-2-2s-2 0.895-2 2c0 0.732 0.413 1.345 1 1.694z"
-          ></path>
-        </svg>
-        Join Room
-      </button>
-          <center>
-            {% if success %}
-            <p style="color: green;"><b>{{ success }}</b></p>
-            {% endif %}
-            {% if error %}
-            <p style="color: red;">{{ error }}</p>
-            {% endif %}
-          </center>
-        </form>
+        
+        <button class="join-room__button" type="submit">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                <path fill="currentColor" d="M16 21l-13-13h-3l16 16 16-16h-3l-13 13z"></path>
+            </svg>
+            Join Room
+        </button>
 
-        <div class="auth__action">
-          <p>Want to create your own Room?</p>
-          <a href="{% url 'register' %}" class="btn btn--link">Create</a>
+        {% if success %}
+        <div class="message message--success">
+            {{ success }}
         </div>
-      </div>
+        {% endif %}
+        
+        {% if error %}
+        <div class="message message--error">
+            {{ error }}
+        </div>
+        {% endif %}
+    </form>
+
+    <div class="join-room__footer">
+        <p>Want to create your own Room? <a href="{% url 'register' %}">Create Now</a></p>
     </div>
 </div>
-</main>
-
 {% endblock content %}
