--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1449,7 +1449,7 @@ a {
 }
 
 /*==============================
-=>  Create Room
+=>  Create Class
 ================================*/
 
 .create-room.layout .layout__box {
