--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,7 @@
             </div>
           </div>
         </div>
-        <div class="logo__text">Discom</div>
+        <div class="logo__text">teachme</div>
       </div>
     </a>
     <form class="header__search" method="get" action="{% url 'home' %}">
