--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -7,7 +7,7 @@
   <!-- Mobile Menu -->
   <div class="mobile-menu">
     <div class="mobile-menuItems">
-      <a class="btn btn--pill" href="{% url 'topics' %}">Browse Topics</a>
+      <a class="btn btn--pill" href="{% url 'topics' %}">Browse Class Rooms</a>
       <a class="btn btn--pill" href="{% url 'activity' %}">Recent Activities</a>
     </div>
   </div>
@@ -34,8 +34,8 @@
       </div>
       <div class="roomList__header">
         <div>
-          <h2>Study Room</h2>
-          <p>{{room_count}} Rooms available</p>
+          <h2>Class Room</h2>
+          <p>{{room_count}} Class Rooms Available</p>
         </div>
         <a class="btn btn--main" href="{% url 'create-room' %}">
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
@@ -44,7 +44,7 @@
               d="M16.943 0.943h-1.885v14.115h-14.115v1.885h14.115v14.115h1.885v-14.115h14.115v-1.885h-14.115v-14.115z"
             ></path>
           </svg>
-          Create Room
+          Create Class
         </a>
       </div>
 
