--- a/base/templates/base/home_old.html
+++ b/base/templates/base/home_old.html
@@ -18,7 +18,7 @@
     <div class="">
         <h5>{{room_count}} rooms available</h5>
         <a href="{% url 'create-room' %}">
-            Create Room
+            Create Class
         </a> <hr>
         <div>
             {% include 'base/feed_component.html' %}
